// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default multiple uses 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
intl.formatMessage({
    defaultMessage: "hello"
});
intl.formatMessage({
    defaultMessage: "some other message"
});
export { };
"
`;

exports[`default some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: "hello"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: "hello"
        }),
        children: intl.formatMessage({
            defaultMessage: "hello"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`default with FormattedMessage imported as something else 1`] = `
"intl.formatMessage({
    defaultMessage: "i18n"
});
export { };
"
`;

exports[`default with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`default with a value interpolated in the message 1`] = `
"intl.formatMessage({
    defaultMessage: "template string 2"
});
export { };
"
`;

exports[`default with a variable as the defaultMessage 1`] = `
"var message = "variable message";
intl.formatMessage({
    defaultMessage: message
});
export { };
"
`;

exports[`default with a variable as the defaultMessage 2`] = `
"import { message } from './messages';
intl.formatMessage(message);
"
`;

exports[`default with custom properties in formatMessage call 1`] = `
"intl.formatMessage({
    defaultMessage: "custom prop",
    other: 123
});
export { };
"
`;

exports[`filebase = true with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`removePrefix = "src" with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`removePrefix = "src.__fixtures__" with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`removePrefix = "src/" -- with slash with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`removePrefix = /__fixtures__/ with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;

exports[`removePrefix = false with Injection API HOC imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello"
});
export { };
"
`;
